Commit dump to resolve previous commits being unbuildable [NOTE: this commit is unstable and has features that are incomplete] note that game settings are a dud in this commit.

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -2719,6 +2719,9 @@
         }
       }
     },
+    "Current Bottle: Default" : {
+
+    },
     "Damn." : {
       "localizations" : {
         "ar" : {
@@ -9203,6 +9206,9 @@
           }
         }
       }
+    },
+    "q" : {
+
     },
     "RECENTLY PLAYED" : {
       "localizations" : {
