--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -4635,7 +4635,10 @@
     "Create a bottle" : {
 
     },
-    "Current Bottle: Default" : {
+    "Current Bottle" : {
+
+    },
+    "Current bottle:" : {
 
     },
     "Damn." : {
