Add custom bottle support for games

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -15758,7 +15758,7 @@
         }
       }
     },
-    "Mythic was unable to create the default Windows® container to launch Windows® games. Please contact support. (%@" : {
+    "Mythic was unable to create the default Windows® container to launch Windows® games. Please contact support. (Error: %@)" : {
 
     },
     "Next" : {
