Wording improvements to some functions Improved (un)install views Added support for a base path parameter in game installation.

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -23103,6 +23103,9 @@
     "Where do you want the bottle's base path to be located?" : {
 
     },
+    "Where do you want the game's base path to be located?" : {
+
+    },
     "Where is the game located?" : {
 
     },
