--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -2602,6 +2602,9 @@
         }
       }
     },
+    "Are you sure you want to skip Mythic Engine installation?" : {
+
+    },
     "Are you sure you want to stop %@ %@?" : {
       "localizations" : {
         "en" : {
@@ -5051,7 +5054,7 @@
         }
       }
     },
-    "Default bottle settings" : {
+    "Default Bottle Settings" : {
 
     },
     "Default Bottle Setup" : {
@@ -11945,6 +11948,9 @@
     "In order to launch Windows® games, Mythic must download\na specialized translation layer.\n\nThe download time should take ~7 minutes or less,\ndepending on your internet connection." : {
 
     },
+    "In order to launch Windows® games, Mythic must download\na specialized translation layer.\n\nThe download time should take ~10 minutes or less,\ndepending on your internet connection." : {
+
+    },
     "Initializing..." : {
 
     },
@@ -15864,6 +15870,9 @@
     "Mythic Engine is Mythic's implementation of Apple's game porting toolkit (GPTK),\nwhich combines wine and D3DMetal, to create a windows gaming experience on macOS.\nSimilar to Proton, Mythic Engine attempts to be an emulator-like experience that\nenables native Windows games to be playable on macOS, while coming closer to native\nperformance than ever before. (performance will vary between games)" : {
 
     },
+    "Mythic Engine is not installed." : {
+
+    },
     "Mythic is checking the connection to Epic." : {
 
     },
@@ -19427,6 +19436,12 @@
           }
         }
       }
+    },
+    "Skip" : {
+
+    },
+    "Skip this step" : {
+
     },
     "Sorry, this isn't implemented yet!" : {
       "localizations" : {
@@ -23892,6 +23907,9 @@
       }
     },
     "Wine/Mythic Engine" : {
+
+    },
+    "Without Mythic Engine, you'll be unable to launch windows games." : {
 
     },
     "You can't delete the default bottle." : {
