Add Discord RPC support and Improve app delegate structure

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -153,6 +153,9 @@
     "Dismiss loading" : {
 
     },
+    "Display Mythic activity status on Discord" : {
+
+    },
     "Doing this means you can only play macOS-supported games.\n" : {
 
     },
